@@ -547,7 +547,7 @@ void afp_over_dsi(AFPObj *obj)
 
         if (reload_request) {
             reload_request = 0;
-            load_volumes(AFPobj, lv_none);
+            load_volumes(AFPobj, lv_force);
         }
 
         /* The first SIGINT enables debugging, the next restores the config */
