@@ -102,7 +102,11 @@ struct vol {
 };
 
 /* load_volumes() flags */
-typedef enum {lv_none = 0, lv_all = 1} lv_flags_t;
+typedef enum {
+    lv_none = 0,
+    lv_all = 1,
+    lv_force = 2
+} lv_flags_t;
 
 /* volume flags */
 #define AFPVOL_OPEN (1<<0)
