@@ -1,6 +1,8 @@
 Changes in 3.1.6
 ================
 * FIX: Spotlight: fix for long running queries
+* UPD: afpd: distribute SIGHUP from parent afpd to children and force
+       reload shares
 
 Changes in 3.1.5
 ================
